--- a/static/index.html
+++ b/static/index.html
@@ -16,15 +16,13 @@
     const form = document.getElementsByTagName('form')[0];
     console.log('form', form);
     form.addEventListener('submit', function (e) {
-        console.log('e', e);
         e.preventDefault();
         const link = document.getElementsByTagName('input')[0].value;
         fetch('/shorten', { method: 'POST', body: JSON.stringify({ link }) })
             .then((res) => res.json())
             .then(res =>{
                 const shortUrlPlace = document.getElementsByTagName('p')[0];
-                shortUrlPlace.innerHTML = `<a target='_blank' href='${res.link}'>${res.link}</a>`
-                console.log('res.link', res.link)}
+                shortUrlPlace.innerHTML = `<a target='_blank' href='${res.link}'>${res.link}</a>`;}
             )
     })
 </script>
